[tool.poetry]
name = "vsb-eink-mqtt-gw-cli"
version = "1.0.1"
description = ""
authors = ["Marek Lukáš <tajnymag@gmail.com>"]
readme = "README.md"
packages = [{include = "vsb_eink_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.1"
paho-mqtt = "^1.6.1"
numpy = {version = "^1.26.0", python = ">=3.11,<3.13"}


[tool.poetry.group.dev.dependencies]
nuitka = "^1.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
