[tool.poetry]
name = "vsb-eink-mqtt-gw-cli"
version = "1.0.4"
description = ""
authors = ["Marek Lukáš <tajnymag@gmail.com>"]
readme = "README.md"
packages = [{include = "vsb_eink_cli"}]

[tool.poetry.dependencies]
python = ">=3.10"
pillow = "^10.0.1"
paho-mqtt = "^1.6.1"
numpy = "^1.26.0"


[tool.poetry.group.dev.dependencies]
nuitka = "^1.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
